--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mssql": "^10.0.2",
     "next": "14.2.35",
     "next-themes": "^0.3.0",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
