--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.4",
+    "sql.js": "^1.10.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^7.0.0",
@@ -76,6 +77,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sql.js": "^1.4.9",
     "@types/uuid": "^10.0.0",
     "@types/wav": "^1.0.2",
     "autoprefixer": "^10.4.19",
